# redis-video-stream

./: .gitignore  PatchableImage.py  README.md  celery.bat  celery_app.py  celery_service.bat  celery_task.py  dump.rdb  example.1.bat  example.1.py  fastapi.py  flower.bat  gradio.bat  gradio_ui.py  pyproject.toml  redis.bat  run.bat  run.sh  stream_task  stream_task.py  uvicorn.bat  webapi.py
examples/: pipeline.py
scripts/linux/: celery.sh  example_pipeline.sh  flower.sh  gradio.sh  redis.sh  uvicorn.sh
scripts/windows/: celery.bat  example_pipeline.bat  flower.bat  gradio.bat  redis.bat  uvicorn.bat
src/redis_video_stream/: __init__.py  api.py  patchable_image.py  tasks.py  ui.py
test/: testWebsocketMsg.py  testWebsocketRedis.py
tests/: test_websocket_redis.py  test_websocket_redis_stream.py
