[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-video-stream"
version = "0.1.0"
description = "Redis-backed video streaming tasks with Celery, FastAPI, and Gradio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "aiohttp",
    "celery",
    "fastapi",
    "flower",
    # "gradio",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "pydantic",
    "pyautogui",
    "pygetwindow",
    "qrcode",
    "redis",

    # Make these direct deps so uv applies the PyTorch source rules.
    "torch",
    "torchvision",

    "uvicorn",
    "ultralytics>=8.4.52",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]